--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Put your own description here</title>
+    <title>KH Complex Processes Documentation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
@@ -15,7 +15,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <div class="container-fluid header p-3">
-    <h1>Site name</h1>
+    <h1>1789 Pasteria - Planning Doc</h1>
 </div>
 <nav class="navbar navbar-expand-lg px-3 py-2 mb-2">
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -25,13 +25,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" href="#">Brief</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="#">UX planning</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
+                <a class="nav-link" href="#">Relevant implications (describe)</a>
+            </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Sprints(Front End)</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sprints(Database)</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sprints(Finalising and Testing)</a>
+            </li>
+               <li class="nav-item">
+                <a class="nav-link" href="#">Relevant implications (address)</a>
             </li>
         </ul>
     </div>
@@ -67,7 +79,51 @@
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/projectbacklog.png" alt="backlog board">
     <p> This is my project backlog board, captured part way through the project. </p>
 
-     <hr>
+    <!-- Relevant implications: describe  -->
+    <div class="container-lg mb-2">
+    <h2> Relevant Implications (describe) </h2>
+    <!-- groovy bootstrap list -->
+    <ol class="list-group list-group-numbered">
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Intellectual Property</div>
+                Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Accessibility</div>
+                Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Aesthetics</div>
+                Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Future proofing</div>
+                Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+                <div class="fw-bold">Functionality</div>
+                Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+        </li>
+    </ol>
+    <hr>
+</div>
     <h2>Boards and sprints</h2>
     <hr>
     <h3> General brainstorming and concept sketches</h3>
