--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                 <a class="nav-link" href="#">UX planning</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#">Scoping</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Relevant implications (describe)</a>
             </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Sprints(Front End)</a>
+                <a class="nav-link" href="#">Front End Development</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Sprints(Database)</a>
@@ -60,72 +63,78 @@
         The aims have been listed out in order of priority and this means that I can complete and have
         feedback on tasks at regular intervals.<br>
         Before starting the website I completed some UX studies
-            <ul>
-    <li> Looking at the types of users who will be accessing the site and the kind of design and experiences that
+        <ul>
+        <li> Looking at the types of users who will be accessing the site and the kind of design and experiences that
         they expect when they are online</li>
-    <li> Doing some competition analysis to get a sense of the design style and
+        <li> Doing some competition analysis to get a sense of the design style and
         features of websites that perform similar functions.</li>
-    <li> Completing a basic plan for the site, with the understanding that this
+        <li> Completing a basic plan for the site, with the understanding that this
         most likely will evolve over the project </li>
-</ul>
-        <hr>
-<h3> Link to user experience planning</h3>
-    <a class="" href="assets/ALTITUDE.pdf">
-    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/ux_planning_pic_link.png" alt="pic">
+        </ul>
+    <hr>
+
+    <h2> Link to user experience planning</h2>
+        <a class="" href="assets/ALTITUDE.pdf">
+        <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/ux_planning_pic_link.png" alt="pic">
         </a>
     <hr>
-    <h2>Project Backlog</h2>
-    <a href="https://github.com/users/paul-khouri/projects/9"> Board </a>
-    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/projectbacklog.png" alt="backlog board">
-    <p> This is my project backlog board, captured part way through the project. </p>
+<h2>Scoping</h2>
+    <h3>Project Backlog</h3>
+        <a href="https://github.com/users/paul-khouri/projects/9">Project Backlog Board </a>
+     <p> This is my project backlog board, captured part way through the project. </p>
+        <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/projectbacklog.png" alt="backlog board">
+
+    <h3>Big picture overview plan</h3>
+        <a href="https://github.com/users/paul-khouri/projects/5">Overview planning board</a>
+    <p> Once I started on this project, I started to think about the main tasks that would have to happen <br>
+    I put this kanban board together to help me get a sense of all the things that would need to happen.</p>
+     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/overview.png" alt="backlog board">
+    <hr>
 
     <!-- Relevant implications: describe  -->
-    <div class="container-lg mb-2">
+<div class="container-lg mb-2">
     <h2> Relevant Implications (describe) </h2>
     <!-- groovy bootstrap list -->
-    <ol class="list-group list-group-numbered">
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold">Intellectual Property</div>
-                Content for list item
-            </div>
-            <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold">Accessibility</div>
-                Content for list item
-            </div>
-            <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-
+        <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Aesthetics</div>
-                Content for list item
+            <div class="fw-bold">Intellectual Property</div>
+            Content for list item
             </div>
             <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-
-        <li class="list-group-item d-flex justify-content-between align-items-start">
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Future proofing</div>
-                Content for list item
+            <div class="fw-bold">Accessibility</div>
+            Content for list item
             </div>
             <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start">
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Functionality</div>
-                Content for list item
+            <div class="fw-bold">Aesthetics</div>
+            Content for list item
             </div>
             <span class="badge bg-primary rounded-pill">14</span>
-        </li>
-    </ol>
-    <hr>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+            <div class="fw-bold">Future proofing</div>
+            Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+            <div class="ms-2 me-auto">
+            <div class="fw-bold">Functionality</div>
+            Content for list item
+            </div>
+            <span class="badge bg-primary rounded-pill">14</span>
+            </li>
+        </ol>
 </div>
-    <h2>Boards and sprints</h2>
-    <hr>
+     <hr>
+    <h2>Front End Development</h2>
     <h3> General brainstorming and concept sketches</h3>
     <img class="img-fluid" src="assets/images/pasteria_plan_drawings.png" alt="plan drawing">
         <hr>
@@ -181,17 +190,18 @@ margin-bottom: 1em;
 }
 </code></pre>
     <!-- *************************************** -->
-        <hr>
+
         <h3>Sprint Two</h3>
         <p>Aim: The design isn't good enough. Mike was kind of enthusiastic but when his partner(business and life), Vanessa,
             saw it, I could tell she wasn't happy. We agreed that if we can get a design that everyone is happy with, then
             we can focus on the technical and content challenges</p>
         <p>Boards</p>
     <h4>Design Trials </h4>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/Illustrator_working_page.png" alt="plan drawing">
         <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/design_trials.png" alt="plan drawing">
         <p><a href="https://github.com/paul-khouri/pasta-time/tree/97b7de712723ada7f6a351cb129e997765cb6435">
         Repository at this point</a></p>
-     <h5>Reflection</h5>
+     <h4>Reflection</h4>
     <p> These trials worked well and Mike and Vanessa liked both of them. <br>
     The graphics were made in illustrator and the techniques were quite simple<br>
     Both the banner graphics were exported as svg files, so they look really clean.</p>
@@ -215,15 +225,66 @@ margin-bottom: 1em;
         &lt;/div&gt;
 </code>
 </pre>
-
-
-
-        <p>Test</p>
-
+     <h4>Mobile view tests</h4>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/mobileview_s2.png" alt="plan drawing">
         <hr>
+    <h3>Sprint Three</h3>
+    <h4>Aim</h4>
+     <h4>Board plan</h4>
+      <h4>Testing</h4>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/template.png" alt="Three browser views">
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/threepages_template.png" alt="Three browser views">
+<h4>Big review</h4>
+     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/samplecommitcap_1.png" alt="Commit cap">
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/updatedprojectbacklog_1.png" alt="Backlog cap">
 <!-- *************************************** -->
     <h2> Developing the database and integrating into the Pasta site </h2>
-    <a href="https://github.com/users/paul-khouri/projects/5">Main planning board</a>
+    <h3> Starting design</h3>
+    <a href="https://app.diagrams.net/#G1iioj8T2Ml0xZBWP1JuOvW72UuVFE5KJW"> draw.io db planning doc</a>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/Pasteria_Database_Plan.png" alt="Three browser views">
+    <h3>Sprint Four</h3>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/PasteriaPlanning-Page-2.drawio.png" alt="Three browser views">
+    <a href="https://github.com/users/paul-khouri/projects/14/views/1">Planning board for news page</a>
+     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/newspage_board.png" alt="Three browser views">
+<h4> server.py news route code</h4>
+<pre style="font-size: 1em;"><code class="Python"># interesting comment
+@app.route('/news')
+def news():
+    # query for the page
+    sql = """select news.news_id, news.title, news.subtitle, news.content, news.newsdate, member.name
+       from news
+       join member on news.member_id= member.member_id
+       order by news.newsdate desc;
+       """
+    result = run_search_query_tuples(sql, (), db_path, True)
+    print(result)
+    return render_template("news.html", news=result)
+    </code></pre>
+  <h4> news.html code</h4>
+<pre style="font-size: 1em;">
+<code class="html">
+    &lt;div class=&quot;container-lg py-sm-5 py-1&quot;&gt;
+     &lt;h1&gt; News&lt;/h1&gt;
+    &lt;div class=&quot;news p-4 my-4 text-end&quot;&gt;
+        &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=0, task=&apos;add&apos;) }}&quot;&gt;Add News&lt;/a&gt;
+    &lt;/div&gt;
+
+
+    {% for row in news %}
+    &lt;div class=&quot;news p-4 my-4&quot;&gt;
+    &lt;h2&gt; {{ row[&apos;title&apos;] }}&lt;/h2&gt;
+        &lt;div class=&quot;subtitle&quot;&gt; {{ row[&apos;subtitle&apos;] }}&lt;/div&gt;
+        &lt;p class=&quot;news-text&quot;&gt; {{ row[&apos;content&apos;] | replace(&quot;\n&quot;, &quot;&lt;br&gt;&quot;) | safe}} &lt;/p&gt;
+        &lt;div class=&quot;news-meta&quot;&gt;Posted by {{ row[&apos;name&apos;] }} on {{ row[&apos;newsdate&apos;] | news_date }}&lt;/div&gt;
+        &lt;div class=&quot;news-meta&quot;&gt;
+            &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;update&apos;) }}&quot;&gt;Update&lt;/a&gt;
+            &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;delete&apos;) }}&quot;&gt;Delete&lt;/a&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+    {% endfor %}
+&lt;/div&gt;
+</code>
+</pre>
 
     <h3>Images (landscape fits better than portrait)</h3>
     <!-- one image -->
@@ -306,8 +367,12 @@ def review_fruit(l):
         output = "{:&le; 10} -- {: &gt;4}".format(x[0], x[1])
         print(output)
     return None</code></pre>
+
+
     <h3>Some CSS</h3>
 <pre style="font-size: 1em;">
+
+
 <code class="css">/* interesting comment */
 :root{
 --base-back: rgb(150,150,150);
