Log-in diagram and updated ER diagram, start on relevant implications

--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
             <div class="fw-bold">Future proofing</div>
-            Content for list item
+                <p>Future proofing is about whether the website can be kept up to date.
+                Can content be easily changed, old content removed and new content added.
+                Often the user of the website will not have significant technical knowledge
+                of how the web-site works. So these users should be able to maintain the website using  options
+                that allow them to manage the web-site from the interface. This means having forms and
+                option buttons and these only being available to an authorised user.</p>
+                <p>By building a website that uses a database to store the page content and making options
+                (such as buttons and form pages) available to manage the site content, the web-site
+                can be continually kept up to date</p>
             </div>
             <span class="badge bg-primary rounded-pill">14</span>
             </li>
@@ -246,7 +254,7 @@ margin-bottom: 1em;
     This is the first priority.<br>
     Other useful features of the database are all the items on the menu, combo deals and also a members table.</p>
     <a href="https://app.diagrams.net/#G1iioj8T2Ml0xZBWP1JuOvW72UuVFE5KJW" target="_blank"> draw.io db planning doc</a>
-    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/Pasteria_Database_Plan.png" alt="Three browser views">
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/PasteriaPlanning-Pasta_DB_plan_updated.png" alt="Three browser views">
 
     <h3>Sprint Four</h3>
     <h4>Aim:</h4>
@@ -330,7 +338,7 @@ def news():
             <img class="img-fluid mx-auto d-block" src="assets/images/newsprintout.png">
         </div>
     </div>
-
+<!-- ******************************************************* -->
        <h3>Sprint Six</h3>
     <p>Aim: Build a form to go with the news page so that an authorised user
         can <b> Create, Update, Delete</b> news items.
@@ -341,42 +349,12 @@ def news():
             <source src="assets/vids/CUDtest.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    <h3>Images (landscape fits better than portrait)</h3>
-    <!-- one image -->
-    <div class="row mb-2">
-        <div class="col-md-12 my-2">
-            <img class="img-fluid mx-auto d-block my-2" src="assets/images/place_holder.png"> </div>
-        </div>
-    <!-- two images -->
-    <div class="row">
-        <div class="col-md-6 my-2">
-           <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
-        </div>
-        <div class="col-md-6 my-2">
-            <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
-        </div>
-    </div>
+       <!-- ******************************************************* -->
+     <h3>Sprint Seven</h3>
+     <p>Aim: Building the log-in.</p>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/PasteriaPlanning-LogIn_Diagram.png" alt="Three browser views">
+    <!-- ******************************************************* -->
 
-        <hr>
-
-    <h3>Video Test Example</h3>
-        <video controls>
-            <source src="assets/vids/littleTest.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <p>
-            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-            molestie consequat, vel illum dolore eu feugiat nulla facilisis at
-            vero eros et accumsan et iusto odio dignissim qui blandit praesent
-            luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-            volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-        </p>
-        <hr>
-</div>
-<!-- -->
 <div class="container-lg mb-2">
     <h2> Relevant Implications Summary</h2>
     <!-- groovy bootstrap list -->
@@ -405,6 +383,45 @@ def news():
     </ol>
     <hr>
 </div>
+
+
+    <h3>Images (landscape fits better than portrait)</h3>
+    <!-- one image -->
+    <div class="row mb-2">
+        <div class="col-md-12 my-2">
+            <img class="img-fluid mx-auto d-block my-2" src="assets/images/place_holder.png"> </div>
+        </div>
+    <!-- two images -->
+    <div class="row">
+        <div class="col-md-6 my-2">
+           <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
+        </div>
+        <div class="col-md-6 my-2">
+            <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
+        </div>
+    </div>
+        <hr>
+
+
+    <h3>Video Test Example</h3>
+        <video controls>
+            <source src="assets/vids/littleTest.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
+            molestie consequat, vel illum dolore eu feugiat nulla facilisis at
+            vero eros et accumsan et iusto odio dignissim qui blandit praesent
+            luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
+            volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+        </p>
+        <hr>
+</div>
+<!-- -->
+
 
 <div class="container-lg">
 <h2>Example code presentations</h2>
