--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid header p-3">
     <h1>1789 Pasteria - Planning Doc</h1>
 </div>
-<nav class="navbar navbar-expand-lg px-3 py-2 mb-2">
+<nav class="navbar navbar-expand-lg px-3 py-2 mb-2 sticky-top">
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon navbar-dark"></span>
     </button>
@@ -37,13 +37,13 @@
                 <a class="nav-link" href="#">Relevant implications (describe)</a>
             </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Front End</a>
+                <a class="nav-link" href="#fe">Front End</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#db">Database</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Finalising and Testing</a>
+                <a class="nav-link" href="#tg">Finalising and Testing</a>
             </li>
                <li class="nav-item">
                 <a class="nav-link" href="#">Relevant implications (address)</a>
@@ -142,7 +142,8 @@
         </ol>
 </div>
      <hr>
-    <h2>Front End Development</h2>
+    <!-- section -->
+    <h2 id="fe">Front End Development</h2>
     <h3> General brainstorming and concept sketches</h3>
     <img class="img-fluid" src="assets/images/pasteria_plan_drawings.png" alt="plan drawing">
         <hr>
@@ -245,7 +246,8 @@ margin-bottom: 1em;
 <h4>Big review</h4>
      <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/samplecommitcap_1.png" alt="Commit cap">
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/updatedprojectbacklog_1.png" alt="Backlog cap">
-<!-- *************************************** -->
+    <!-- *************************************** -->
+    <!-- section -->
     <h2 id="db"> Developing the database and integrating into the Pasta site </h2>
     <h3> Starting design</h3>
     <p> This is my staring design for a database for the pasta site. The news page will be an important way of keep
@@ -279,9 +281,10 @@ margin-bottom: 1em;
     This will be very useful.<br>
     After a few false starts I got the query to run and print out, using a testing file.
         This means I can work out and test a query before implementing in the flask server file.</p>
-
-    <h3>Sprint Five</h3>
-    <h4>Aim:</h4> <p>To build the news page, connect the database and load news items
+<!-- Sprint Five -->
+<h3>Sprint Five</h3>
+    <h4>Aim:</h4>
+    <p>To build the news page, connect the database and load news items
     <br> Run and test </p>
     <a href="https://github.com/users/paul-khouri/projects/14/views/1">Planning board for news page</a>
      <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/newspage_board.png" alt="Three browser views">
@@ -289,72 +292,118 @@ margin-bottom: 1em;
     The buttons are not functional, but are part of the design as an authorised user will need these.</p>
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/newsdummy.png" alt="Three browser views">
 
-
-<h4> server.py news route code</h4>
-<pre style="font-size: 1em;"><code class="Python"># interesting comment
-@app.route('/news')
-def news():
-    # query for the page
-    sql = """select news.news_id, news.title, news.subtitle, news.content, news.newsdate, member.name
-       from news
-       join member on news.member_id= member.member_id
-       order by news.newsdate desc;
-       """
-    result = run_search_query_tuples(sql, (), db_path, True)
-    print(result)
-    return render_template("news.html", news=result)
-    </code></pre>
-  <h4> news.html code</h4>
-<pre style="font-size: 1em;">
-<code class="html">
-    &lt;div class=&quot;container-lg py-sm-5 py-1&quot;&gt;
-     &lt;h1&gt; News&lt;/h1&gt;
-    &lt;div class=&quot;news p-4 my-4 text-end&quot;&gt;
-        &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=0, task=&apos;add&apos;) }}&quot;&gt;Add News&lt;/a&gt;
-    &lt;/div&gt;
-
-
-    {% for row in news %}
-    &lt;div class=&quot;news p-4 my-4&quot;&gt;
-    &lt;h2&gt; {{ row[&apos;title&apos;] }}&lt;/h2&gt;
-        &lt;div class=&quot;subtitle&quot;&gt; {{ row[&apos;subtitle&apos;] }}&lt;/div&gt;
-        &lt;p class=&quot;news-text&quot;&gt; {{ row[&apos;content&apos;] | replace(&quot;\n&quot;, &quot;&lt;br&gt;&quot;) | safe}} &lt;/p&gt;
-        &lt;div class=&quot;news-meta&quot;&gt;Posted by {{ row[&apos;name&apos;] }} on {{ row[&apos;newsdate&apos;] | news_date }}&lt;/div&gt;
-        &lt;div class=&quot;news-meta&quot;&gt;
-            &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;update&apos;) }}&quot;&gt;Update&lt;/a&gt;
-            &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;delete&apos;) }}&quot;&gt;Delete&lt;/a&gt;
+<p> Implementing the code to read from the database and output onto the page</p>
+<div class="row">
+    <div class="col-md-6">
+        <h4> server.py news route code</h4>
+        <pre><code class="Python"># interesting comment
+        @app.route('/news')
+        def news():
+            # query for the page
+            sql = """select news.news_id, news.title, news.subtitle, news.content, news.newsdate, member.name
+               from news
+               join member on news.member_id= member.member_id
+               order by news.newsdate desc;
+               """
+            result = run_search_query_tuples(sql, (), db_path, True)
+            print(result)
+            return render_template("news.html", news=result)
+            </code></pre>
+      </div>
+    <div class="col-md-6">
+        <h4> news.html code</h4>
+        <pre><code class="html">
+            &lt;div class=&quot;container-lg py-sm-5 py-1&quot;&gt;
+             &lt;h1&gt; News&lt;/h1&gt;
+            &lt;div class=&quot;news p-4 my-4 text-end&quot;&gt;
+                &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=0, task=&apos;add&apos;) }}&quot;&gt;Add News&lt;/a&gt;
+            &lt;/div&gt;
+            {% for row in news %}
+            &lt;div class=&quot;news p-4 my-4&quot;&gt;
+            &lt;h2&gt; {{ row[&apos;title&apos;] }}&lt;/h2&gt;
+                &lt;div class=&quot;subtitle&quot;&gt; {{ row[&apos;subtitle&apos;] }}&lt;/div&gt;
+                &lt;p class=&quot;news-text&quot;&gt; {{ row[&apos;content&apos;] | replace(&quot;\n&quot;, &quot;&lt;br&gt;&quot;) | safe}} &lt;/p&gt;
+                &lt;div class=&quot;news-meta&quot;&gt;Posted by {{ row[&apos;name&apos;] }} on {{ row[&apos;newsdate&apos;] | news_date }}&lt;/div&gt;
+                &lt;div class=&quot;news-meta&quot;&gt;
+                    &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;update&apos;) }}&quot;&gt;Update&lt;/a&gt;
+                    &lt;a class=&quot;btn btn-primary&quot; href=&quot;{{ url_for(&apos;news_cud&apos;, id=row[&apos;news_id&apos;], task=&apos;delete&apos;) }}&quot;&gt;Delete&lt;/a&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+            {% endfor %}
         &lt;/div&gt;
-    &lt;/div&gt;
-    {% endfor %}
-&lt;/div&gt;
-</code>
-</pre>
-
+        </code>
+        </pre>
+    </div>
+</div>
+ <p> Testing</p>
         <div class="row mb-3">
         <div class="col-md-6 my-2">
+             <h4> Printing outputs from the query (row factory objects) as a test</h4>
            <img class="img-fluid mx-auto d-block" src="assets/images/rowobjects_server_log.png">
         </div>
         <div class="col-md-6 my-2">
+            <h4> News items on the webpage </h4>
             <img class="img-fluid mx-auto d-block" src="assets/images/newsprintout.png">
         </div>
     </div>
 <!-- ******************************************************* -->
-       <h3>Sprint Six</h3>
-    <p>Aim: Build a form to go with the news page so that an authorised user
-        can <b> Create, Update, Delete</b> news items.
+<!-- Sprint Six -->
+<h3>Sprint Six</h3>
+    <h4>Aim:</h4>
+    <p>Build a form to go with the news page so that an authorised user
+    can <b> Create, Update, Delete</b> news items.
     <br> Run and test</p>
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/CRUD_plan.png" alt="Three browser views">
     <h4>Testing the Add news, Update and Delete</h4>
-        <video controls>
-            <source src="assets/vids/CUDtest.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-       <!-- ******************************************************* -->
-     <h3>Sprint Seven</h3>
-     <p>Aim: Building the log-in.</p>
+    <video controls>
+        <source src="assets/vids/CUDtest.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+<!-- ******************************************************* -->
+<!-- Sprint Seven -->
+ <h3>Sprint Seven</h3>
+    <h4>Aim:</h4>
+    <p> Building the log-in.</p>
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/PasteriaPlanning-LogIn_Diagram.png" alt="Three browser views">
-    <!-- ******************************************************* -->
 
+<!-- ******************************************************* -->
+<!-- Sprint Seven -->
+ <h3>Sprint Eight</h3>
+    <h4>Aim:</h4>
+    <p>Load the menu data for the menu page and complete the combos page</p>
+    <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/food_combos_plan.png" alt="Three browser views">
+
+<!-- ******************************************************* -->
+<!-- Finalising and Testing section -->
+    <h2 id="tg"> Finalising and Testing </h2>
+<h3>Accessibility Test (Wave) </h3>
+       <!-- one image -->
+    <div class="row mb-2">
+        <div class="col-md-12 my-2">
+            <img class="img-fluid mx-auto d-block my-2" src="assets/images/wavetest.png"> </div>
+        </div>
+        <!-- two images -->
+    <div class="row">
+        <div class="col-md-6 my-2">
+           <img class="img-fluid mx-auto d-block" src="assets/images/wavetest_contrast.png">
+        </div>
+        <div class="col-md-6 my-2">
+            <img class="img-fluid mx-auto d-block" src="assets/images/wavetest_page_structure.png">
+        </div>
+    </div>
+
+     <h3>Performance Test (Pingdom) <a href="https://tools.pingdom.com/"> tools.pingdom.com </a></h3>
+        <div class="row">
+        <div class="col-md-6 my-2">
+           <img class="img-fluid mx-auto d-block" src="assets/images/pingdom_perfomance.png">
+        </div>
+        <div class="col-md-6 my-2">
+            <img class="img-fluid mx-auto d-block" src="assets/images/pingdom_page_distrubution.png">
+        </div>
+    </div>
+
+<!-- ******************************************************* -->
+<!-- Relevant Implications -->
 <div class="container-lg mb-2">
     <h2> Relevant Implications Summary</h2>
     <!-- groovy bootstrap list -->
@@ -385,103 +434,10 @@ def news():
 </div>
 
 
-    <h3>Images (landscape fits better than portrait)</h3>
-    <!-- one image -->
-    <div class="row mb-2">
-        <div class="col-md-12 my-2">
-            <img class="img-fluid mx-auto d-block my-2" src="assets/images/place_holder.png"> </div>
-        </div>
-    <!-- two images -->
-    <div class="row">
-        <div class="col-md-6 my-2">
-           <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
-        </div>
-        <div class="col-md-6 my-2">
-            <img class="img-fluid mx-auto d-block" src="assets/images/place_holder_sm.jpg">
-        </div>
-    </div>
-        <hr>
 
-
-    <h3>Video Test Example</h3>
-        <video controls>
-            <source src="assets/vids/littleTest.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <p>
-            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-            molestie consequat, vel illum dolore eu feugiat nulla facilisis at
-            vero eros et accumsan et iusto odio dignissim qui blandit praesent
-            luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
-            volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-        </p>
-        <hr>
 </div>
 <!-- -->
 
 
-<div class="container-lg">
-<h2>Example code presentations</h2>
-    <p>These do not need to be used extensively but look great in the right place</p>
-    <!-- pre stands for pre-formatted and will render text as it appears in the htm code -->
-    <!-- this means extra line breaks appear hence the code starting with no spacings or line breaks-->
-<h3>Some SQL</h3>
-<pre style="font-size: 1em;"><code class="SQL">SELECT track_name as "Tracks",
-album_name as "Album", album_artist as "Artist" --Interesting comment
-FROM music_table
-WHERE track_name like "R%";</code></pre>
-<h3>Some Python</h3>
-<pre style="font-size: 1em;"><code class="Python"># interesting comment
-def review_fruit(l):
-    for x in l:
-        output = "{:&le; 10} -- {: &gt;4}".format(x[0], x[1])
-        print(output)
-    return None</code></pre>
-
-
-    <h3>Some CSS</h3>
-<pre style="font-size: 1em;">
-
-
-<code class="css">/* interesting comment */
-:root{
---base-back: rgb(150,150,150);
---black: rgb(0,0,0);
-}
-body{
-margin: 0;
-padding: 0;
-font-size: 100%;
-}</code></pre>
-<h3>Some HTML</h3>
-<!-- to present html code on an html coded web page raises an interesting problem -->
-<!-- the code needs to be converted into "escape" characters to handle the < and > -->
-<!-- there are online tools to do it https://codebeautify.org/html-escape-unescape -->
-<pre style="font-size: 1em;">
-<code class="html">&lt;!-- interesting comment --&gt;
-&lt;li class=&quot;list-group-item d-flex justify-content-between align-items-start&quot;&gt;
-&lt;div class=&quot;ms-2 me-auto&quot;&gt;
-    &lt;div class=&quot;fw-bold&quot;&gt;Subheading&lt;/div&gt;
-    Content for list item
-&lt;/div&gt;
-&lt;span class=&quot;badge bg-primary rounded-pill&quot;&gt;14&lt;/span&gt;
-&lt;/li&gt;
-</code>
-</pre>
-    <h3>Some Javascript (most likely will not need)</h3>
-<pre style="font-size: 1em;">
-<code class="javscript">function inBoundsCheck(xM, yM, x, y, w, h){
-    if( xM > x && xM < x+w && yM > y && yM < y+h){
-    // interesting comment
-        return true;
-    }else{
-        return false;
-    }
-}</code>
-</pre>
-</div>
 
 <footer> Your name </footer>
