Combo and Menu Database sprints

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     This was all working 'okay' and I spent quite a bit of time exploring features such as media queries and using the root style
         to set colour variables. I also spent a lot of time trying to get the black line framing the text.</p>
     <p> Some examples of the CSS I was exploring </p>
-    <pre style="font-size: 1em;">
+    <pre>
 <code class="css">/* interesting comment */
 :root{
     /* a css variable */
@@ -216,7 +216,7 @@ margin-bottom: 1em;
     Both the banner graphics were exported as svg files, so they look really clean.</p>
     <h4>Layout with boostrap </h4>
      <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/boostrap_column.png" alt="plan drawing">
-    <pre style="font-size: 1em;">
+    <pre>
 <code class="html">
     &lt;div class=&quot;container-lg&quot;&gt;
             &lt;div class=&quot;row align-items-center &quot;&gt;
@@ -370,8 +370,28 @@ margin-bottom: 1em;
 <!-- Sprint Seven -->
  <h3>Sprint Eight</h3>
     <h4>Aim:</h4>
-    <p>Load the menu data for the menu page and complete the combos page</p>
+    <p>Load the menu data for the menu page and complete the combos page hjvjvjvjv</p>
     <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/food_combos_plan.png" alt="Three browser views">
+    <div class="row">
+        <div class="col-md-6">
+            <p> Testing the menu query in a separate file</p>
+              <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/menu_test_file.png" alt="Three browser views">
+        </div>
+        <div class="col-md-6">
+            <p> Testing the combo query in a separate file</p>
+             <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/combo_test_file.png" alt="Three browser views">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <p> Menu page example</p>
+              <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/menu_page.png" alt="Three browser views">
+        </div>
+        <div class="col-md-6">
+            <p> Combo page example</p>
+             <img class="img-fluid mx-auto d-block w-75 my-5" src="assets/images/combo_page.png" alt="Three browser views">
+        </div>
+    </div>
 
 <!-- ******************************************************* -->
 <!-- Finalising and Testing section -->
